==> Oryx-Embedded/CycloneCRYPTO/hardware/stm32h7xx_crypto_hash.c <==
#define TRACE_LEVEL CRYPTO_TRACE_LEVEL
#include "stm32h7xx.h"
#include "stm32h7xx_hal.h"
#include "stm32h7xx_hal_hash.h"
#include "stm32h7xx_hal_hash_ex.h"
#include "core/crypto.h"
#include "hardware/stm32h7xx_crypto.h"
#include "hardware/stm32h7xx_crypto_hash.h"
#include "hash/md5.h"
#include "hash/sha1.h"
#include "hash/sha224.h"
#include "hash/sha256.h"
#include "debug.h"

void sha1Init(Sha1Context *context)
{
   //Acquire exclusive access to the HASH module
   osAcquireMutex(&stm32h7xxCryptoMutex);

   //Initialize hash computation
   HAL_HASH_Init(&HASH_Handle);

   //Save hash context
   hashSaveContext(context->hwContext);

   //Release exclusive access to the HASH module
   osReleaseMutex(&stm32h7xxCryptoMutex);

   //Number of bytes in the buffer
   context->size = 0;
}

void sha1Update(Sha1Context *context, const void *data, size_t length)
{
   size_t n;

   //Acquire exclusive access to the HASH module
   osAcquireMutex(&stm32h7xxCryptoMutex);

   //Restore hash context
   hashRestoreContext(context->hwContext);

   //Process the incoming data
   while(length > 0)
   {
      //Check whether some data is pending in the buffer
      if(context->size == 0 && length >= 4)
      {
         //The length must be a multiple of 4 bytes
         n = length - (length % 4);

         //Update hash value
         HAL_HASH_SHA1_Accmlt(&HASH_Handle, (uint8_t *) data, n);

         //Advance the data pointer
         data = (uint8_t *) data + n;
         //Remaining bytes to process
         length -= n;
      }
      else
      {
         //The buffer can hold at most 4 bytes
         n = MIN(length, 4 - context->size);

         //Copy the data to the buffer
         osMemcpy(context->buffer + context->size, data, n);

         //Update the SHA-1 context
         context->size += n;
         //Advance the data pointer
         data = (uint8_t *) data + n;
         //Remaining bytes to process
         length -= n;

         //Check whether the buffer is full
         if(context->size == 4)
         {
            //Update hash value
            HAL_HASH_SHA1_Accmlt(&HASH_Handle, context->buffer, 4);
            //Empty the buffer
            context->size = 0;
         }
      }
   }

   //Save hash context
   hashSaveContext(context->hwContext);

   //Release exclusive access to the HASH module
   osReleaseMutex(&stm32h7xxCryptoMutex);
}

void sha1Final(Sha1Context *context, uint8_t *digest)
{
   //Acquire exclusive access to the HASH module
   osAcquireMutex(&stm32h7xxCryptoMutex);

   //Restore hash context
   hashRestoreContext(context->hwContext);

   //Finalize hash computation
   HAL_HASH_SHA1_Accmlt_End(&HASH_Handle, context->buffer, context->size,
      context->digest, HAL_MAX_DELAY);

   //Release exclusive access to the HASH module
   osReleaseMutex(&stm32h7xxCryptoMutex);

   //Copy the resulting digest
   if(digest != NULL)
   {
      osMemcpy(digest, context->digest, SHA1_DIGEST_SIZE);
   }
}

void sha224Init(Sha224Context *context)
{
   //Acquire exclusive access to the HASH module
   osAcquireMutex(&stm32h7xxCryptoMutex);

   //Initialize hash computation
   HAL_HASH_Init(&HASH_Handle);

   //Save hash context
   hashSaveContext(context->hwContext);

   //Release exclusive access to the HASH module
   osReleaseMutex(&stm32h7xxCryptoMutex);

   //Number of bytes in the buffer
   context->size = 0;
}

void sha256Init(Sha256Context *context)
{
   //Acquire exclusive access to the HASH module
   osAcquireMutex(&stm32h7xxCryptoMutex);

   //Initialize hash computation
   HAL_HASH_Init(&HASH_Handle);

   //Save hash context
   hashSaveContext(context->hwContext);

   //Release exclusive access to the HASH module
   osReleaseMutex(&stm32h7xxCryptoMutex);

   //Number of bytes in the buffer
   context->size = 0;
}

void sha256Update(Sha256Context *context, const void *data, size_t length)
{
   size_t n;

   //Acquire exclusive access to the HASH module
   osAcquireMutex(&stm32h7xxCryptoMutex);

   //Restore hash context
   hashRestoreContext(context->hwContext);

   //Process the incoming data
   while(length > 0)
   {
      //Check whether some data is pending in the buffer
      if(context->size == 0 && length >= 4)
      {
         //The length must be a multiple of 4 bytes
         n = length - (length % 4);

         //Update hash value
         HAL_HASHEx_SHA256_Accmlt(&HASH_Handle, (uint8_t *) data, n);

         //Advance the data pointer
         data = (uint8_t *) data + n;
         //Remaining bytes to process
         length -= n;
      }
      else
      {
         //The buffer can hold at most 4 bytes
         n = MIN(length, 4 - context->size);

         //Copy the data to the buffer
         osMemcpy(context->buffer + context->size, data, n);

         //Update the SHA-256 context
         context->size += n;
         //Advance the data pointer
         data = (uint8_t *) data + n;
         //Remaining bytes to process
         length -= n;

         //Check whether the buffer is full
         if(context->size == 4)
         {
            //Update hash value
            HAL_HASHEx_SHA256_Accmlt(&HASH_Handle, context->buffer, 4);
            //Empty the buffer
            context->size = 0;
         }
      }
   }

   //Save hash context
   hashSaveContext(context->hwContext);

   //Release exclusive access to the HASH module
   osReleaseMutex(&stm32h7xxCryptoMutex);
}

void sha256Final(Sha256Context *context, uint8_t *digest)
{
   //Acquire exclusive access to the HASH module
   osAcquireMutex(&stm32h7xxCryptoMutex);

   //Restore hash context
   hashRestoreContext(context->hwContext);

   //Finalize hash computation
   HAL_HASHEx_SHA256_Accmlt_End(&HASH_Handle, context->buffer, context->size,
      context->digest, HAL_MAX_DELAY);

   //Release exclusive access to the HASH module
   osReleaseMutex(&stm32h7xxCryptoMutex);

   //Copy the resulting digest
   if(digest != NULL)
   {
      osMemcpy(digest, context->digest, SHA256_DIGEST_SIZE);
   }
}
